ALB-Ingress-Path-Based-Routing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: facebook-svc
spec:
  selector:
    app: facebook
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: instagram-svc
spec:
  selector:
    app: instagram
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
