ALB-Ingress-Path-Based-Routing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress-rules
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: "alb-ingress"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:992382659631:certificate/036f401e-63a2-48c4-8759-8b8ed7dadd08
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
    - host: www.example.com
      http:
         paths:
           - path: /facebook
             pathType: Prefix
             backend:
               service:
                 name: facebook-svc
                 port:
                   number: 8080
           - path: /instagram
             pathType: Prefix
             backend:
               service:
                 name: instagram-svc
                 port:
                   number: 8080
